Updating package.json to attempt fixing the homepage directory of the gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stock",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cjkrcc.github.io/stock",
+  "homepage": "https://cjkrcc.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
